# docker-cryptodca-bot

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml  test-compose.yml
.github/workflows/: merge.yml  pr.yml  tag.yml
SourceCode/: bot_internals.py  coinbase_pro.py  cryptodca_bot.py  gemini_exchange.py  mongo.py
